--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 [dependencies]
 binread = "2.1.1"
 clap = "2.33.3"
+hmac = "0.11.0"
 rayon = "1.5.1"
 rust-crypto = "0.2.36"
 sha-1 = "0.9.7"
