--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ anyhow = "1.0.60"
 binread = "2.1.1"
 binwrite = "0.2.1"
 clap = "3.2.16"
-hmac = "0.12.1"
+hmac-sha256 = "1.1.4"
 rand = "0.8.4"
 rayon = "1.5.1"
+rc4 = "0.1.0"
 rust-crypto = "0.2.36"
 sha-1 = "0.10.0"
 sha2 = "0.10.2"
