--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
+authors = ["marcograss"]
+description = "Tool to encrypt/decrypt and pack/unpack RouterOS v6.13+ backup files"
+edition = "2021"
 name = "routerosbackuptools"
 version = "0.1.2"
-edition = "2021"
 
 [dependencies]
 aes = "0.8.1"
 anyhow = "1.0.65"
 binread = "2.2.0"
 binwrite = "0.2.1"
-clap = "3.2.22"
+clap = "4.0.9"
 ctr = "0.9.2"
 hmac-sha256 = "1.1.4"
 rand = "0.8.5"
