--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.1.4"
 [dependencies]
 aes = "0.8.3"
 anyhow = "1.0.75"
-binread = "2.2.0"
+binrw = "0.13.1"
 binwrite = "0.2.1"
 clap = "4.4.7"
 ctr = "0.9.2"
